test update and README

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 <body>
   <div class='ui basic segment'>
     <h2 class='ui header stacked segment'>
-      Static Content to view md files
+      Static Content - view md files
     </h2>
   </div>
   <div class='ui basic segment'>
