--- a/views/template/template.html
+++ b/views/template/template.html
@@ -6,4 +6,7 @@
     <body>
       {{content}}
     </body>
+    <div>
+      <button onclick="window.location.href='/'" class='ui basic segment'>File Directory</button>
+    </div>
 </html>
