--- a/views/template/template.html
+++ b/views/template/template.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
         <title>Welcome to Acme</title>
     </head>
-    <body>
+    <body class='ui basic segment'>
       {{content}}
     </body>
-    <div>
-      <button onclick="window.location.href='/'" class='ui basic segment'>File Directory</button>
+    <div class='ui basic segment'>
+    </div>
+    <div class='ui basic'>
+      <button class='ui blue basic button' onclick="window.location.href='/'">File Directory</button>
     </div>
 </html>
